Kelsey Development Sandbox/src/objects/DS_TRDETAIL2__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>DS_Trauma2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;-1&apos;</defaultValue>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_TRBEREAVE__c</fullName>
        <label>STATUS TRBEREAVE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRBULLYING__c</fullName>
        <label>STATUS TRBULLYING</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRCOMMVIO__c</fullName>
        <label>STATUS TRCOMMVIO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRDISPLACE__c</fullName>
        <label>STATUS TRDISPLACE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRIMPCARE__c</fullName>
        <label>STATUS TRIMPCARE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRKIDNAP__c</fullName>
        <label>STATUS TRKIDNAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRSCHOOLVIO__c</fullName>
        <label>STATUS TRSCHOOLVIO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRSEPARATION__c</fullName>
        <label>STATUS TRSEPARATION</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_TRVIOLENCE__c</fullName>
        <label>STATUS TRVIOLENCE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T14RFREQ__c</fullName>
        <description>Kidnap frequency of experience</description>
        <label>T14RFREQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T14RINCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnapping included Arrest</description>
        <label>T14RINCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RINCB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnapping included Captor-bonding</description>
        <label>T14RINCB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RINCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnapping included Custody</description>
        <label>T14RINCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RINCOS__c</fullName>
        <description>Kidnapping included Other Specify</description>
        <label>T14RINCOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T14RINCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnapping included Other</description>
        <label>T14RINCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RINCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnapping included Ransom</description>
        <label>T14RINCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RINCS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnapping included Rape/Sexual assaults/ trafficking</description>
        <label>T14RINCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPERAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp = Other Adult Rel</description>
        <label>T14RPERAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPEROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp = Other Youth</description>
        <label>T14RPEROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPERP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp = Parent</description>
        <label>T14RPERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPERSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp = Sibling</description>
        <label>T14RPERSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPERST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp= Stranger</description>
        <label>T14RPERST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPERUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp = Unrelated adult</description>
        <label>T14RPERUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RPERU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap Perp= Unknown</description>
        <label>T14RPERU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap revealed at Baseline</description>
        <label>T14RRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RREUN__c</fullName>
        <description>Length before reunification</description>
        <label>T14RREUN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T14RRODT__c</fullName>
        <description>Kidnap revealed at Other date</description>
        <label>T14RRODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T14RRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap revealed at Other</description>
        <label>T14RRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RTYPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap type = experienced</description>
        <label>T14RTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap type = Unknown</description>
        <label>T14RTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RTYPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap type = Vicarious</description>
        <label>T14RTYPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RTYPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kidnap type = Witnessed</description>
        <label>T14RTYPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T14RWEAPON__c</fullName>
        <description>Kidnap Was a weapon used?</description>
        <label>T14RWEAPON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T15RDAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Accident Grandparent</description>
        <label>T15RDAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDAOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Accident Other Adult Relative</description>
        <label>T15RDAOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDAOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Accident Other Youth</description>
        <label>T15RDAOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Accident Parent</description>
        <label>T15RDAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDASB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Accident Sibling</description>
        <label>T15RDASB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDAUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to Accident Unrelated Adult</description>
        <label>T15RDAUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Accident</description>
        <label>T15RDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDDG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Disaster Grandparent</description>
        <label>T15RDDG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDDOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Disaster Other Adult Relative</description>
        <label>T15RDDOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDDOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Disaster Other Youth</description>
        <label>T15RDDOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDDP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Disaster Parent</description>
        <label>T15RDDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDDSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Disaster Sibling</description>
        <label>T15RDDSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDDUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to Disaster Unrelated Adult</description>
        <label>T15RDDUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Natural Disaster</description>
        <label>T15RDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDIG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death Illness Grandparent</description>
        <label>T15RDIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDIOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death Illness Other Adult Relative</description>
        <label>T15RDIOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDIOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death Illness Other Youth</description>
        <label>T15RDIOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death Illness Parent</description>
        <label>T15RDIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDISB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death Illness Sibling</description>
        <label>T15RDISB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDIUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death Illness Unrelated Adult</description>
        <label>T15RDIUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death sudden natural death due to illness</description>
        <label>T15RDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDMG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to murder/homicide Grandparent</description>
        <label>T15RDMG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDMOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to murder/homicide Other Adult Relative</description>
        <label>T15RDMOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDMOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to murder/homicide Other Youth</description>
        <label>T15RDMOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDMP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to murder/homicide Parent</description>
        <label>T15RDMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDMSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to murder/homicide Sibling</description>
        <label>T15RDMSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDMUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to murder/homicide Unrelated Adult</description>
        <label>T15RDMUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to murder/homicide</description>
        <label>T15RDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDNG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death natural cause Grandparent</description>
        <label>T15RDNG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDNOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss death natural cause Other Adult Relative</description>
        <label>T15RDNOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDNOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death natural cause Other Youth</description>
        <label>T15RDNOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDNP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss death natural cause Parent</description>
        <label>T15RDNP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDNSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss death natural cause Sibling</description>
        <label>T15RDNSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDNUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss death natural cause Unrelated Adult</description>
        <label>T15RDNUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss death natural cause</description>
        <label>T15RDN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Other Grandparent</description>
        <label>T15RDOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDOOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Other Other Adult Relative</description>
        <label>T15RDOOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDOOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Other Other Youth</description>
        <label>T15RDOOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDOP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Other Parent</description>
        <label>T15RDOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDOSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Other Sibling</description>
        <label>T15RDOSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDOSP__c</fullName>
        <description>Traumatic death due to Other Specified</description>
        <label>T15RDOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T15RDOUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to Other Unrelated Adult</description>
        <label>T15RDOUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Other</description>
        <label>T15RDO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDSG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Suicide Grandparent</description>
        <label>T15RDSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDSOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Suicide Other Adult Relative</description>
        <label>T15RDSOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDSOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to  Suicide Other Youth</description>
        <label>T15RDSOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Suicide Parent</description>
        <label>T15RDSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDSSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Suicide Sibling</description>
        <label>T15RDSSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDSUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to Suicide Unrelated Adult</description>
        <label>T15RDSUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Suicide</description>
        <label>T15RDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDTG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Terrorism Grandparent</description>
        <label>T15RDTG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDTOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Terrorism Other Adult Relative</description>
        <label>T15RDTOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDTOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Terrorism Other Youth</description>
        <label>T15RDTOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Terrorism Parent</description>
        <label>T15RDTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDTSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Terrorism  Sibling</description>
        <label>T15RDTSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDTUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to Terrorism Unrelated Adult</description>
        <label>T15RDTUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Terrorism</description>
        <label>T15RDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDUG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Unknown Grandparent</description>
        <label>T15RDUG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDUOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Unknown Other Adult Relative</description>
        <label>T15RDUOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDUOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Unknown Other Youth</description>
        <label>T15RDUOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDUP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Unknown Parent</description>
        <label>T15RDUP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDUSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Unknown   Sibling</description>
        <label>T15RDUSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDUUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to Unknown Unrelated Adult</description>
        <label>T15RDUUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to Unknown</description>
        <label>T15RDU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDVG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to violence Grandparent</description>
        <label>T15RDVG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDVOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to violence Other Adult Relative</description>
        <label>T15RDVOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDVOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to violence Other Youth</description>
        <label>T15RDVOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDVP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to violence Parent</description>
        <label>T15RDVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDVSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to violence Sibling</description>
        <label>T15RDVSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDVUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to violence Unrelated Adult</description>
        <label>T15RDVUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to violence</description>
        <label>T15RDV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDWG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to War Grandparent</description>
        <label>T15RDWG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDWOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to War Other Adult Relative</description>
        <label>T15RDWOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDWOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to War Other Youth</description>
        <label>T15RDWOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDWP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to War Parent</description>
        <label>T15RDWP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDWSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to War  Sibling</description>
        <label>T15RDWSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDWUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic  death due to War Unrelated Adult</description>
        <label>T15RDWUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RDW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic death due to War</description>
        <label>T15RDW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RFREQ__c</fullName>
        <description>Traumatic Loss frequency of experience</description>
        <label>T15RFREQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T15RPRAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bereavement Other Adult Rel</description>
        <label>T15RPRAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RPRGR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bereavement Grandparent</description>
        <label>T15RPRGR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RPROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bereavement Unrelated Youth</description>
        <label>T15RPROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RPRP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bereavement Parent</description>
        <label>T15RPRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RPRSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bereavement Sibling</description>
        <label>T15RPRSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RPRUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bereavement Unrelated adult (known to the child)</description>
        <label>T15RPRUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss revealed at Baseline</description>
        <label>T15RRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RRODT__c</fullName>
        <description>Traumatic Loss revealed at Other date</description>
        <label>T15RRODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T15RRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss revealed at Other</description>
        <label>T15RRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RSRV__c</fullName>
        <description>Child attended services</description>
        <label>T15RSRV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T15RTYPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss type = experienced</description>
        <label>T15RTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss type = Unknown</description>
        <label>T15RTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RTYPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss type = Vicarious</description>
        <label>T15RTYPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T15RTYPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Traumatic Loss type = Witnessed</description>
        <label>T15RTYPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCCCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Court Mandate</description>
        <label>T16RCCCM</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>